tests/macros/select/extension.stderr
error: option `extension` does not exist for kind `select`
 --> $DIR/extension.rs:2:46
  |
2 |     let q = inquisition::questions![Select { extension: todo!() }];
  |                                              ^^^^^^^^^
