tests/macros/select/extension.rs
fn main() {
    let q = inquisition::questions![Select { extension: todo!() }];
}
